--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask==2.0.3
 Flask-Cors==5.0.0
 fpdf==1.7.2
 gender-guesser==0.4.0
+gunicorn
 idna==3.7
 imbalanced-learn==0.8.1
 importlib-metadata==4.8.3
